# AutoSpendTracker

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PRODUCTION_PLAN.md  README.md  RUNBOOK.md  SECURITY.md  api.py  check_setup.py  docker-compose.yml  fetch_mails.py  gmail_auth.py  pyproject.toml  requirements.txt  run_app.py  sheet.gs  sheets_integration.py  testapi.py
archive/: api.py  fetch_mails.py  sheets_integration.py  testapi.py
docker/: entrypoint.sh  healthcheck.sh
docs/: DEPLOYMENT.md  MODERNIZATION.md  RUNBOOK.md  analysis.md  architecture.md  modernize.md  pathlib-modernization.md  progress.md  technical_doc.md  testing-guide.md
docs/ai_docs/: README_MIGRATION.md  ROADMAP.md
docs/audit/: 00-overview.md  README.md  phase-1-security.md  phase-2-data-integrity.md  phase-3-quality.md
src/autospendtracker/: __init__.py  __main__.py  ai.py  api.py  auth.py  email_parser.py  exceptions.py  fetch_mails.py  gmail_auth.py  google_auth.py  mail.py  main.py  models.py  monitoring.py  notifier.py  rate_limiter.py  security.py  security_manager.py  sheets.py  sheets_integration.py  utils.py
src/autospendtracker/config/: __init__.py  app_config.py  logging_config.py  settings.py
tests/: conftest.py  test_ai.py  test_auth.py  test_e2e.py  test_mail.py  test_main.py  test_models.py  test_sheets.py
