[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autospendtracker"
version = "1.0.0"
description = "Automated expense tracking using Gmail and Vertex AI."
requires-python = ">=3.11"
dependencies = [
    # Use ~= for compatible release (allows patch updates only, not minor/major)
    # This ensures reproducible builds while allowing security patches
    "google-auth-oauthlib~=1.2.0",
    "google-auth-httplib2~=0.2.0",
    "google-api-python-client~=2.147.0",
    "google-cloud-aiplatform~=1.70.0",
    "google-genai~=1.14.0",  # Google Gen AI SDK
    "beautifulsoup4~=4.12.0",
    "python-dotenv~=1.0.0",
    "requests~=2.32.0",
    "tenacity~=9.0.0",
    "tqdm~=4.66.0",  # Progress bar for email processing
]

[project.optional-dependencies]
dev = [
    "ruff", # For linting and formatting
    "mypy", # For type checking
    "pytest", # For testing
]

[tool.ruff]
line-length = 88 
select = ["E", "W", "F", "I", "UP", "PL", "TID"] 
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["autospendtracker"]

[tool.mypy]
python_version = "3.11" # Match your requires-python
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
