[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autospendtracker"
version = "2.1.0"
description = "Automated expense tracking using Gmail and Vertex AI."
requires-python = ">=3.13"
dependencies = [
    # Use ~= for compatible release (allows patch updates only, not minor/major)
    # This ensures reproducible builds while allowing security patches
    "google-auth-oauthlib~=1.2.0",
    "google-auth-httplib2~=0.2.0",
    "google-api-python-client~=2.147.0",
    "google-cloud-aiplatform~=1.70.0",
    "google-genai~=1.14.0",  # Google Gen AI SDK
    "beautifulsoup4~=4.12.0",
    "python-dotenv~=1.0.0",
    "requests~=2.32.0",
    "tenacity~=9.0.0",
    "tqdm~=4.66.0",  # Progress bar for email processing
    "pydantic~=2.10.0",  # Already in use, ensuring latest v2
    "pydantic-settings~=2.11.0",  # Modern config management
    "ratelimit~=2.2.0",  # API rate limiting
    "apprise~=1.9.0",  # Notification library for email/webhook alerts
    # "perfmetrics~=3.1.0",  # Performance monitoring and metrics - commented out due to build issues
]

[project.scripts]
autospendtracker = "autospendtracker.main:main"

[project.optional-dependencies]
dev = [
    "ruff", # For linting and formatting
    "mypy", # For type checking
    "pytest", # For testing
]

[tool.ruff]
line-length = 88 
select = ["E", "W", "F", "I", "UP", "PL", "TID"] 
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["autospendtracker"]

[tool.mypy]
python_version = "3.13" # Match your requires-python
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

# Per-module configuration
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
